--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "create-next-app": "^13.0.6",
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
