--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.5",
+    "@prisma/client": "^4.7.1",
     "create-next-app": "^13.0.6",
     "next": "13.0.6",
+    "next-auth": "^4.18.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
@@ -20,6 +23,7 @@
     "@types/react-dom": "18.0.9",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
+    "prisma": "^4.7.1",
     "typescript": "4.9.4"
   }
 }
