--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "13.0.6",
     "next-auth": "^4.18.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sass": "^1.57.0"
   },
   "devDependencies": {
     "@types/node": "18.11.11",
