--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "create-next-app": "^13.0.6",
     "next": "13.0.6",
     "next-auth": "^4.18.6",
+    "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.57.0"
