--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
 	"name": "H2GO",
 	"lang": "en",
 	"description": "Hydration application to support your daily intake",
-	"start_url": "/",
+	"start_url": "https://h2go.vercel.app/",
 	"background_color": "#00aae7",
 	"theme_color": "#00aae7",
 	"dir": "auto",
