pwa theme color

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,8 +4,8 @@
 	"lang": "en",
 	"description": "Hydration application to support your daily intake",
 	"start_url": "https://h2go.vercel.app/",
-	"background_color": "#00aae7",
-	"theme_color": "#00aae7",
+	"background_color": "#11161D",
+	"theme_color": "#11161D",
 	"dir": "auto",
 	"display": "standalone",
 	"orientation": "any",
