--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "13.0.6",
     "next-auth": "^4.18.6",
     "next-pwa": "^5.6.0",
+    "nodemailer": "^6.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.57.0"
