landingpage styling complete

--- a/.env
+++ b/.env
@@ -6,6 +6,8 @@
 
 email=h2go_password_123
 
+NEXTAUTH_URL="https://h2go.vercel.app"
+
 EMAIL_SERVER="smtp://h2go.hydrate%40gmail.com:hjhiptbzohxcudwk@smtp.gmail.com:587"
 EMAIL_FROM="h2go.hydrate@gmail.com"
 
