--- a/package.json
+++ b/package.json
@@ -17,16 +17,19 @@
     "next-pwa": "^5.6.0",
     "nodemailer": "^6.8.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "sass": "^1.57.0"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.5.1",
     "@types/node": "18.11.11",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "prisma": "^4.7.1",
-    "typescript": "4.9.4"
+    "sass": "^1.57.1",
+    "sass-loader": "^13.2.0",
+    "typescript": "4.9.4",
+    "webpack": "^5.75.0"
   }
 }
