--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.7.1",
     "create-next-app": "^13.0.6",
+    "lottie-web": "^5.10.1",
     "next": "13.0.6",
     "next-auth": "^4.18.6",
     "next-pwa": "^5.6.0",
