--- a/.env
+++ b/.env
@@ -4,9 +4,11 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-email=h2go_password_123
+# email=h2go_password_123
 
-NEXTAUTH_URL="https://h2go.vercel.app"
+NEXTAUTH_URL="http://localhost:3000"
+
+# NEXTAUTH_URL="https://h2go.vercel.app"
 
 EMAIL_SERVER="smtp://h2go.hydrate%40gmail.com:hjhiptbzohxcudwk@smtp.gmail.com:587"
 EMAIL_FROM="h2go.hydrate@gmail.com"
