--- a/.env
+++ b/.env
@@ -6,9 +6,9 @@
 
 # email=h2go_password_123
 
-# NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_URL="http://localhost:3000"
 
-NEXTAUTH_URL="https://h2go.vercel.app"
+# NEXTAUTH_URL="https://h2go.vercel.app"
 
 EMAIL_SERVER="smtp://h2go.hydrate%40gmail.com:hjhiptbzohxcudwk@smtp.gmail.com:587"
 EMAIL_FROM="h2go.hydrate@gmail.com"
