--- a/.env
+++ b/.env
@@ -16,3 +16,5 @@ EMAIL_FROM="h2go.hydrate@gmail.com"
 NEXTAUTH_SECRET="0f960c70e924f42f48aed4e9620a6ab1"
 
 DATABASE_URL="mongodb+srv://h2go:h2go123@cluster.hirn74p.mongodb.net/clusterretryWrites=true&w=majority"
+
+API_SECRET_KEY="p4BzzpE3WXgjriSzgaDtbQMYx"
