--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -9,5 +9,5 @@ jobs:
       - name: Update user intake
         run: |
           curl --request POST \
-          --url 'https://h2go.vercel.app/api/cron' \
+          --url 'http://localhost:3000/api/cron' \
           --header 'Authorization: Bearer ${{ secrets.API_SECRET_KEY }}'
